# zelda3

./: .gitignore  CMakeLists.txt  README.md
platform/win32/: zelda3.rc
